syntax = "proto3";

package book;

option go_package = ".";


service BookService {
  rpc CreateBook(CreateBookReq) returns (CreateBookRes);
  rpc ReadBook(ReadBookReq) returns (ReadBookRes);
  rpc UpdateBook(UpdateBookReq) returns (UpdateBookRes);
  rpc DeleteBook(DeleteBookReq) returns (DeleteBookRes);
  rpc ListBook(ListBookReq) returns (stream ListBookRes);
}


message Book {
  string id = 1;
  string author_id = 2;
  string name = 3;
  string tag = 4;
}

message CreateBookReq {
  Book book = 1;
}

message CreateBookRes {
  Book book = 1;
}


message ReadBookReq {
  string id = 1;
}

message ReadBookRes {
  Book book = 1;
}


message UpdateBookReq {
  Book book = 1;
}

message UpdateBookRes {
  Book book = 1;
}

message DeleteBookReq {
  string id = 1;
}

message DeleteBookRes {
  bool success = 1;
}

message ListBookReq {}

message ListBookRes {
  Book book = 1;
}